[package]
name = "dmg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
eframe = "0.24.0"
thiserror = "1.0.50"
anyhow = "1.0.75"
getopts = "0.2"
tracing-flame = "0.2.0"
